--- a/app/src/main/res/layout/fragment_schedule_item_list.xml
+++ b/app/src/main/res/layout/fragment_schedule_item_list.xml
@@ -14,8 +14,15 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
-        tools:context=".main.conferenceupdates.ScheduleListFragment"
+        tools:context=".main.eventsSchedule.ScheduleListFragment"
         tools:listitem="@layout/fragment_schedule_item" />
+
+    <ProgressBar
+        android:id="@+id/progress_circular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
 
