--- a/app/src/main/res/layout/fragment_group_post_comments.xml
+++ b/app/src/main/res/layout/fragment_group_post_comments.xml
@@ -11,12 +11,11 @@
     <androidx.cardview.widget.CardView xml:card_views="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
-        app:cardCornerRadius="4dp"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        app:cardCornerRadius="4dp">
 
 
         <RelativeLayout
@@ -85,7 +84,7 @@
     <ListView
         android:id="@+id/commentsListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/card_view"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"
