--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -36,6 +36,10 @@
             android:id="@+id/scheduleFragment"
             android:icon="@drawable/ic_schedule"
             android:title="Schedule" />
+        <item
+            android:id="@+id/directMessageFragment"
+            android:icon="@drawable/ic_message"
+            android:title="Direct Message" />
     </group>
 
 </menu>
