--- a/app/src/main/res/layout/fragment_group_post_comments.xml
+++ b/app/src/main/res/layout/fragment_group_post_comments.xml
@@ -74,7 +74,27 @@
                 android:layout_marginBottom="4dp"
                 android:autoLink="web"
                 android:linksClickable="true"
-                android:text="description link or pdf attachment" />
+                android:text="link or pdf attachment"
+                android:visibility="gone"/>
+
+
+            <TextView
+                android:id="@+id/pdfDownloadTV"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:layout_below="@+id/postSubjectTV"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="4dp"
+                android:drawableLeft="@drawable/ic_pdf"
+                android:drawableStart="@drawable/ic_pdf"
+                android:text="DOWNLOAD PDF"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:clickable="true"
+                android:focusable="true"
+                android:visibility="gone"/>
 
         </RelativeLayout>
 
