--- a/app/src/main/res/layout/fragment_chat_messages.xml
+++ b/app/src/main/res/layout/fragment_chat_messages.xml
@@ -25,17 +25,16 @@
 
     <ListView
         android:id="@+id/chatsListView"
-        android:layout_below="@id/chatsDateTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_below="@id/chatsDateTV"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="120dp"
-        android:paddingTop="10dp"
         android:divider="@drawable/list_divider"
-        android:dividerHeight="1.0sp"/>
+        android:dividerHeight="1.0sp"
+        android:paddingTop="10dp" />
 
 
     <com.google.android.material.textfield.TextInputLayout
