consistent buttons,layout fixes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#3F301D</color>
     <color name="colorAccent">#9A7B4F</color>
 
-    <color name="colorWhite">#E6D1AB</color>
+    <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#231709</color>
     <color name="colorGray">#808080</color>
     <color name="mainBackground">#E6D1AB</color>
