--- a/app/src/main/res/layout/fragment_create_group.xml
+++ b/app/src/main/res/layout/fragment_create_group.xml
@@ -41,8 +41,8 @@
 
         <TextView
             android:id="@+id/groupVisibilityTV"
-            android:layout_width="178dp"
-            android:layout_height="68dp"
+            android:layout_width="186dp"
+            android:layout_height="63dp"
             android:layout_marginTop="81dp"
             android:layout_marginEnd="12dp"
             android:layout_marginRight="12dp"
@@ -88,17 +88,16 @@
             android:id="@+id/doneBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="81dp"
             android:background="@drawable/register_rounded_button"
             android:gravity="center"
             android:text="@string/done_button"
             android:textColor="@color/colorWhite"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.544"
+            app:layout_constraintHorizontal_bias="0.557"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.61" />
 
         <ProgressBar
             android:id="@+id/progress_circular"
