--- a/app/src/main/res/layout/fragment_chat_messages_list.xml
+++ b/app/src/main/res/layout/fragment_chat_messages_list.xml
@@ -59,6 +59,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
 </RelativeLayout>
