--- a/app/src/main/res/layout/fragment_chat_message_received.xml
+++ b/app/src/main/res/layout/fragment_chat_message_received.xml
@@ -33,7 +33,7 @@
         android:layout_below="@id/messageReceivedTV"
         android:layout_alignLeft="@id/messageReceivedTV"
         android:layout_alignStart="@id/messageReceivedTV"
-        android:text="10:00"
+        android:text="2020-09-13 10:00"
         android:textSize="12sp" />
 
 
