--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -17,17 +17,15 @@
         android:textStyle="bold"/>
 
 
-
-    <ImageButton
-        android:id="@+id/messageBtn"
+    <Button
+        android:id="@+id/startChatBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/userProfileNameTV"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
-        android:background="@null"
-        android:src="@drawable/ic_insert_comment"/>
+        android:text="START CHAT"/>
 
 
 </RelativeLayout>
