--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -42,7 +42,7 @@
 
     <Button
         android:id="@+id/forgotPasswordBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="155dp"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@id/passwordET"
         android:layout_alignRight="@id/passwordET"
