chat buttons layout

--- a/app/src/main/res/layout/fragment_chat_messages_list.xml
+++ b/app/src/main/res/layout/fragment_chat_messages_list.xml
@@ -50,6 +50,8 @@
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@id/typeMessageET"
         android:layout_toEndOf="@id/typeMessageET"
+        android:background="@drawable/register_rounded_button"
+        android:textColor="@color/colorWhite"
         android:text="SEND"
         android:gravity="center" />
 
