--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -19,12 +19,14 @@
 
     <Button
         android:id="@+id/startChatBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/userProfileNameTV"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
+        android:background="@drawable/register_rounded_button"
+        android:textColor="@color/colorWhite"
         android:text="START CHAT"/>
 
 
