--- a/app/src/main/res/layout/fragment_open_chats_list.xml
+++ b/app/src/main/res/layout/fragment_open_chats_list.xml
@@ -30,6 +30,16 @@
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_fab_post" />
+
+
     <ProgressBar
         android:id="@+id/progress_circular"
         android:layout_width="wrap_content"
