--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -11,23 +11,59 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
-        android:text="user profile name"
+        android:text="@string/user_profile_name"
         android:textStyle="bold"/>
 
 
     <Button
         android:id="@+id/startChatBtn"
-        android:layout_width="130dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/userProfileNameTV"
         android:layout_marginTop="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
         android:background="@drawable/register_rounded_button"
         android:textColor="@color/colorWhite"
-        android:text="START CHAT"/>
+        android:text="@string/chat_button_text"/>
+
+
+    <Button
+        android:id="@+id/friendStatusBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/startChatBtn"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:background="@drawable/register_rounded_button"
+        android:textColor="@color/colorWhite"
+        android:text="@string/friend_button_text"/>
+
+
+    <Button
+        android:id="@+id/blockStatusBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/friendStatusBtn"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:background="@drawable/register_rounded_button"
+        android:textColor="@color/colorWhite"
+        android:text="@string/block_button_text"/>
+
+
+    <ProgressBar
+        android:id="@+id/progress_circular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
 
 
 </RelativeLayout>
