--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -17,7 +17,39 @@
         android:id="@+id/profileFragment"
         android:name="com.codefusiongroup.gradshub.profile.ProfileFragment"
         android:label="@string/menu_profile"
-        tools:layout="@layout/fragment_profile"/>
+        tools:layout="@layout/fragment_profile">
+
+        <action
+            android:id="@+id/action_profileFragment_to_editProfileFragment"
+            app:destination="@id/editProfileFragment"
+
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+
+    </fragment>
+
+
+    <fragment
+        android:id="@+id/editProfileFragment"
+        android:name="com.codefusiongroup.gradshub.profile.EditProfileFragment"
+        android:label="Edit Profile"
+        tools:layout="@layout/edit_profile">
+
+        <action
+            android:id="@+id/action_editProfileFragment_to_profileFragment"
+            app:destination="@id/profileFragment"
+
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+
+            app:popUpTo="@id/profileFragment"
+            app:popUpToInclusive="true" />
+
+    </fragment>
 
 
     <fragment
@@ -143,6 +175,11 @@
         <action
             android:id="@+id/action_chatsListFragment_to_chatMessagesFragment"
             app:destination="@id/chatMessagesFragment" />
+
+        <action
+            android:id="@+id/action_chatsListFragment_to_friendsListFragment"
+            app:destination="@id/friendsListFragment" />
+
     </fragment>
 
 
@@ -180,6 +217,24 @@
         app:popUpToInclusive="true" />
 
     </fragment>
+
+
+    <fragment
+        android:id="@+id/friendsListFragment"
+        android:name="com.codefusiongroup.gradshub.friends.FriendsFragment"
+        android:label="Friends"
+        tools:layout="@layout/fragment_friends_item_list" >
+        <argument
+            android:name="USER"
+            app:argType="com.codefusiongroup.gradshub.common.models.User"/>
+
+        <action
+            android:id="@+id/action_friendsListFragment_to_userProfileFragment"
+            app:destination="@id/userProfileFragment" />
+    </fragment>
+
+
+
 
 
 </navigation>
