--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <files-path name="my_docs" path="." />-
-    <!--<files-path name="my_docs" path="Download/" />-->
+    <!--
+    FileProvider will generate content uris for files in the specified subdirectories of
+    files/ directory of app's in internal storage
+    generated content uri will contain the path segment mydocs/... or myimages/...
+     -->
+    <files-path name="mydocs" path="Download/" />
+    <files-path name="myimages" path="images/" />
+    <cache-path name="myimages" path="images_cache/"/>
 
+    <!-- FileProvider will generate content uris for files in the external storage -->
+    <external-files-path name="extfiles" path="Documents/"/>
+    <external-files-path name="extfiles" path="Download/"/>
+    <external-files-path name="extfiles" path="Pictures/"/>
+    <external-files-path name="extfiles" path="DCIM/"/>
 
 </paths>
